# flowmanga

./: .env  .env.example  .gitignore  AUDIT_REPORT.md  BRANDING.md  CHANGELOG.md  DEPLOYMENT.md  FEATURES.md  LICENSE  MARKETING.md  README.md  REFINEMENT_PASS.md  RELEASE_NOTES.md  RELEASE_NOTES_v2.2.9.md  ROADMAP.md  START.bat  UPDATE_INFO.md  api.md  audit_report.md  better_strings.txt  chat_history_log.jsonl  check_comix.js  check_sig_clues.js  comix_data.json  eslint.a11y.config.js  eslint.config.js  extract.cjs  extracted_strings.txt  fetch_nekos.js  fetch_sankaku.js  fetch_sankaku_no_headers.js  find_home_endpoints_context.js  find_home_requests.js  find_query_params.js  flowmanga_documentation_map.md  index.html  main-dev-DO5JyAjg.js  mangaread_raw.html  manhuaplus_raw.html  manhwaread_action.html  (+20 more)
.github/workflows/: quality.yml  release.yml
browser/: index.html
scratch/: dbm_chapters.html  dbm_page1.html  fetch.js  fetch_bl.js  fetch_bl_chap.js  fetch_dbm.js  fetch_mr.js  manga-item.html  manga_data.json  manga_data_utf8.json  manhwaread_home.html  preview.html  test_dom.js  test_img.js
scripts/: apply-theme-text-tokens.mjs  neutral-panels-to-surface.mjs
src/: App.tsx  index.css  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json  test.rs
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  test_cmd.rs
src/components/: ActivityHeatmap.tsx  AmbientBackground.tsx  AmbientSoundPlayer.tsx  AnalyticsDashboard.tsx  AnalyticsGraph.tsx  AutomationManager.tsx  CommandPalette.tsx  ContextMenu.tsx  ControlPanel.tsx  (+21 more)
(+207 files in other folders)
