[package]
name = "app"
version = "2.5.7"
description = "A local-first manga reader, library, downloader, and visual discovery desktop app."
authors = ["DjonStNix"]
license = "MIT"
repository = "https://github.com/Djonluc/flowmanga"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11", features = ["protocol-asset"] }

tauri-plugin-log = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-cli = "2"
tauri-plugin-dialog = "2"
walkdir = "2.5"
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.22"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "json", "cookies", "gzip", "deflate"] }
headless_chrome = "1"
zip = "0.6"
tauri-plugin-http = "2"
image = "0.25.6"
url = "2.5"
rookie = "0.5.6"
